--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hjs": "~0.0.6",
+    "mongoose": "^4.12.3",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2"
   }
 }
