--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hjs": "~0.0.6",
     "mongoose": "^4.12.3",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2"
